<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="RtlHardcoded">
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminateTint="@color/navy"
        android:elevation="3dp" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:textSize="30sp"
            app:contentScrim="?colorPrimary"
            app:expandedTitleMarginBottom="75dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:title="Title"
            >

            <ImageView
                android:id="@+id/iv_detail"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/img_preview_darker"
                android:scaleType="centerCrop"
                tools:srcCompat="@tools:sample/backgrounds/scenic"
                tools:ignore="ContentDescription" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@null"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/ic_arrow_back_white" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        app:behavior_overlapTop="78dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardBackgroundColor="@color/cardview_dark_background"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                app:contentPaddingBottom="16dp"
                app:contentPaddingLeft="16dp"
                app:contentPaddingRight="16dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card"
                    android:layout_width="170dp"
                    android:layout_height="240dp"
                    android:layout_marginTop="10dp"
                    app:cardCornerRadius="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.22000003">

                    <ImageView
                        android:id="@+id/profile_movie"
                        android:layout_width="170dp"
                        android:layout_height="240dp"
                        android:scaleType="center" />
                </androidx.cardview.widget.CardView>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_release"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="177dp"
                        android:layout_marginTop="65dp"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/release_date"
                        android:textColor="@color/blue"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_genre"/>

                    <TextView
                        android:id="@+id/tv_release_overview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="177dp"
                        android:layout_marginTop="1dp"
                        android:fontFamily="@font/roboto_light"
                        android:text="@string/release_date"
                        android:textColor="@color/white"
                        android:textSize="10sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_release" />

                    <TextView
                        android:id="@+id/tv_genre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="177dp"
                        android:layout_marginTop="1dp"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/genre"
                        android:textColor="@color/blue"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_release_overview" />

                    <TextView
                        android:id="@+id/tv_genre_overview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="177dp"
                        android:layout_marginTop="1dp"
                        android:fontFamily="@font/roboto_light"
                        android:text="@string/genre"
                        android:textColor="@color/white"
                        android:textSize="10sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_genre" />

                    <TextView
                        android:id="@+id/tv_duration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="177dp"
                        android:layout_marginTop="1dp"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/duration"
                        android:textColor="@color/blue"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_genre_overview" />

                    <TextView
                        android:id="@+id/tv_duration_overview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="177dp"
                        android:layout_marginTop="1dp"
                        android:fontFamily="@font/roboto_light"
                        android:text="@string/duration"
                        android:textColor="@color/white"
                        android:textSize="10sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_duration" />

                    <TextView
                        android:id="@+id/tv_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="85dp"
                        android:gravity="center_vertical"
                        android:minHeight="32dp"
                        android:text="@string/description"
                        android:textAllCaps="true"
                        android:textColor="@color/blue"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_duration_overview" />

                    <TextView
                        android:id="@+id/tv_description_overview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:fontFamily="@font/roboto_light"
                        android:lineSpacingExtra="4dp"
                        android:text="@string/description"
                        android:textColor="@android:color/secondary_text_dark"
                        android:textSize="16sp"
                        app:layout_constraintTop_toBottomOf="@+id/tv_description" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>